--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="button next-page-button" v-on:click="nextPage">NEXT</div>
     </div>
 </div>
-<script src="/javascripts/index.js"></script>
-<script src="/javascripts/Constants.js"></script>
-<script src="/javascripts/Util.js"></script>
-<script src="/javascripts/pages.js"></script>
-<script src="/javascripts/firebase.config.js"></script>
-<script src="/javascripts/firebase.login.js"></script>
-<script src="/javascripts/firebase.db.js"></script>
-<script src="/javascripts/vue.js"></script>
-<script src="/javascripts/nodeLinkDiagram.js"></script>
+<script src="javascripts/index.js"></script>
+<script src="javascripts/Constants.js"></script>
+<script src="javascripts/Util.js"></script>
+<script src="javascripts/pages.js"></script>
+<script src="javascripts/firebase.config.js"></script>
+<script src="javascripts/firebase.login.js"></script>
+<script src="javascripts/firebase.db.js"></script>
+<script src="javascripts/vue.js"></script>
+<script src="javascripts/nodeLinkDiagram.js"></script>
 </body>
 </html>
