--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="content">
             <div class="content-html" v-html="pageInfo.contentHTML"></div>
         </div>
-        <div class="button back-page-button" v-if="pageNum>0 && pageNum<5" v-on:click="backPage">BACK</div>
-        <div class="button next-page-button" v-if="pageNum<7" v-on:click="nextPage">NEXT</div>
+        <div class="button next-page-button fix" v-on:click="nextPage">NEXT</div>
     </div>
 </div>
 <script src="javascripts/index.js"></script>
